# himitsubako

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  release.yml  testpypi.yml
docs/: cli-reference.md  configuration.md  getting-started.md  index.md  public-api-changes.md  pyright-basic-inventory.json  pyright-strict-inventory.json  security.md  why-not.md
docs/assets/css/: extra.css
docs/backends/: bitwarden-cli.md  env.md  keychain.md  sops.md
docs/integrations/: direnv.md  pydantic-settings.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.5.0.md  v0.6.0.md  v0.8.0.md
docs/security/: attestations.md
docs/stories/: HMB-S001-project-scaffolding.md  HMB-S002-sops-age-backend.md  HMB-S003-hmb-init.md  HMB-S004-cli-get-set-list.md  HMB-S005-rotate-key.md  HMB-S006-python-api.md  HMB-S007-env-backend.md  HMB-S008-keychain-backend.md  HMB-S009-bitwarden-cli-backend.md  HMB-S010-direnv-helper.md  HMB-S011-pydantic-settings-source.md  HMB-S012-per-credential-routing.md  HMB-S013-integration-tests.md  HMB-S014-ci-pipeline.md  HMB-S015-documentation-site.md  HMB-S016-pypi-publish-prep.md
src/himitsubako/: __init__.py  _redaction.py  api.py  audit.py  config.py  direnv.py  errors.py  google_oauth_rotate.py  pydantic.py  router.py
src/himitsubako/backends/: __init__.py  bitwarden.py  env.py  google_oauth.py  keychain.py  protocol.py  sops.py
src/himitsubako/cli/: __init__.py  init.py  rotate.py  secrets.py  status.py
tests/: conftest.py  test_api.py  test_bitwarden_backend.py  test_cli_init.py  test_cli_rotate.py  test_cli_secrets.py  test_cli_status.py  test_config.py  test_direnv.py  test_env_backend.py  test_errors.py  test_google_oauth.py  test_google_oauth_rotate.py  test_init.py  test_init_keys_mode.py  test_keychain_backend.py  test_protocol.py  test_pydantic_source.py  test_redaction.py  test_rotate_audit.py  test_router.py  test_sops_backend.py
tests/integration/: conftest.py  test_bitwarden_real.py  test_cli_e2e.py  test_direnv_real.py  test_env_roundtrip.py  test_keychain_real.py  test_router_real.py  test_sops_roundtrip.py
