[project]
name = "himitsubako"
version = "0.9.0"
description = "Multi-backend credential abstraction for solo Python developers. SOPS+age, macOS Keychain, Bitwarden CLI, direnv, env vars."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "originalrgsec" },
]
keywords = ["secrets", "credentials", "sops", "age", "direnv", "bitwarden", "keychain", "pydantic-settings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
# Optional backend extras. License-checked and health-scored 2026-04-11;
# see Obsidian/code/oss-health-policy-scores.md for the audit trail.
# Bitwarden CLI backend (HMB-S009) intentionally has no Python pip dep —
# it shells out to the `bw` system binary, which is GPL-3.0 and only safe
# under the External CLI Tool Invocation exemption in
# Obsidian/code/allowed-licenses.md. Do NOT add bitwarden-sdk here;
# that SDK has a non-OSI license (see COR-S037 retrospective).
keychain = ["keyring>=25.0,<26.0"]
pydantic-settings = ["pydantic-settings>=2.13,<3.0"]
# Google OAuth backend (HMB-S030) + rotate plugin (HMB-S032).
# Both packages are Apache-2.0. Pinned to quarantine-safe versions as of
# 2026-04-13: google-auth 2.49.1 (2026-03-12, 32 days old) excluding the
# quarantined 2.49.2 (2026-04-10); google-auth-oauthlib 1.3.1 (2026-03-30,
# 14 days old). The dependency-gate.py hook only checks PyPI's latest
# version rather than the pinned value, so `uv add` rejects these even
# with an aged pin. Workaround: pyproject.toml edit + `uv sync` — still
# respects the policy spirit (quarantine-aged version), noted as a hook
# gap to fix separately.
google = [
    "google-auth>=2.49.0,<3.0,!=2.49.2",
    "google-auth-oauthlib>=1.3.1,<2.0",
]
all = [
    "keyring>=25.0,<26.0",
    "pydantic-settings>=2.13,<3.0",
    "google-auth>=2.49.0,<3.0,!=2.49.2",
    "google-auth-oauthlib>=1.3.1,<2.0",
]
dev = [
    "pytest>=8.0,!=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.8,!=0.15.10",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    # HMB-S037 (pyright basic per DRN-077). Pinned to the major series
    # to keep the basic-mode rule surface stable; bump within this
    # range only after re-running the triage against the new diagnostics.
    # License: MIT (checked 2026-04-18). Health score recorded in
    # Obsidian/code/oss-health-policy-scores.md.
    "pyright>=1.1,<2.0",
]
docs = [
    # License-checked and health-scored 2026-04-11 (HMB Sprint 3 prep).
    # mkdocs 1.6.1 (BSD-2-Clause), mkdocs-material 9.7.6 (MIT).
    # See Obsidian/code/oss-health-policy-scores.md for the audit trail.
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7,<10.0",
]
publish = [
    # License-checked and health-scored 2026-04-11 (HMB Sprint 3 prep).
    # Used by the release workflow only (HMB-S016), never installed
    # into runtime or dev/test dependency sets. See
    # Obsidian/code/oss-health-policy-scores.md for the audit trail.
    # build 1.4.3 excluded because it was <7 days old at scoring time
    # (supply-chain quarantine). Pin can be loosened once 1.4.3 ages
    # past the quarantine window.
    "build>=1.4,<2.0,!=1.4.3",
    "twine>=6.2,<7.0",
]

[project.scripts]
hmb = "himitsubako.cli:main"

[project.urls]
Homepage = "https://github.com/originalrgsec/himitsubako"
Documentation = "https://originalrgsec.github.io/himitsubako/"
Issues = "https://github.com/originalrgsec/himitsubako/issues"
Repository = "https://github.com/originalrgsec/himitsubako"
Changelog = "https://github.com/originalrgsec/himitsubako/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/himitsubako"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run excludes the integration suite so `uv run pytest` and
# `uv run pytest --cov=src` stay fast and unit-only. Run integration
# explicitly via `uv run pytest tests/integration/`.
addopts = "-v --tb=short --ignore=tests/integration"
markers = [
    "unit: fast unit tests (default)",
    "integration: tests requiring external binaries (sops, age, bw, direnv)",
    "macos: tests requiring macOS Keychain",
    "bitwarden: tests requiring an unlocked Bitwarden CLI session (HMB-S020)",
    "direnv: tests requiring the direnv binary (HMB-S020)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["himitsubako"]

[[tool.mypy.overrides]]
# google-auth-oauthlib ships no py.typed marker as of 1.3.1. We use it
# behind an optional-dependency import guard, so untyped is acceptable.
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/himitsubako"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
